# sdl3render3d

./: .gitignore  CMakeLists.txt  Makefile  imgui.ini  main.cpp  mingw-toolchain.cmake  readme.txt
backgrounds/: backgroundFactory.cpp  backgroundFactory.hpp  desert.cpp  desert.hpp
resources/: STAR.ASC
src/: ZBuffer.hpp  amigaRasterizer.hpp  color.hpp  constants.hpp  imgui.ini  main.cpp  rasterizer.hpp  renderer.hpp  scene.cpp  scene.hpp  slib.cpp  slib.hpp  smath.cpp  smath.hpp  tri.hpp
src/backgrounds/: background.hpp  backgroundFactory.cpp  backgroundFactory.hpp  desert.cpp  imagepng.cpp  imagepng.hpp  twister.cpp  twister.hpp
src/effects/: AmigaFlatEffect.hpp  BlinnPhongEffect.hpp  FlatEffect.hpp  GouraudEffect.hpp  PhongEffect.hpp  TexturedBlinnPhongEffect.hpp  TexturedFlatEffect.hpp  TexturedGouraudEffect.hpp  TexturedPhongEffect.hpp
src/objects/: amiga.cpp  amiga.hpp  ascLoader.cpp  ascLoader.hpp  cube.cpp  cube.hpp  objLoader.cpp  objLoader.hpp  solid.cpp  solid.hpp  test.cpp  test.hpp  tetrakis.cpp  tetrakis.hpp  torus.cpp  torus.hpp  world.cpp  world.hpp
